syntax = "proto3";

package ApiProtos.News.NewsDetail;

message NewsDetail {
    int32 id = 1;//新聞ID
    string title = 2;//新聞標題
    string time = 3;//發布時間
    string imgSrc = 4;//新聞圖片
    string content = 5;//內容
}