syntax = "proto3";

package ApiProtos.Players.PlayersMatches;

import "protobuf/protos/api/basic/BasicData.proto";
import "protobuf/protos/api/basic/MatchesData.proto";

message PlayersMatches {

    message Matches {
        repeated ApiProtos.Basic.MatchesData.MatchesSchedule pastMatches = 1; //過去賽事資訊
        string nextUrl = 2;  //分頁連結
        int32 totalPage = 3; //總頁數
    }

    Matches matches = 1; // 賽事資訊
    repeated ApiProtos.Basic.BasicData.BasicInfo leagues = 2; // 聯盟資訊
    repeated ApiProtos.Basic.BasicData.BasicInfo teams = 3; // 球隊資訊
}